Dev discounted Products Routes
